# Pokemon-Python

./: .gitignore  AUTHORING.md  CHANGELOG.md  LICENSE  PLANNED.md  README.md  RELEASE.md  ROADMAP.md  controls.json  pyproject.toml  requirements.txt  save.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUTHORING.md  ENGINE_PHILOSOPHY.md  ESSENTIALS_COMPAT.md  Features.md  GEN5_GAPS.md  ItemPlan.md  PhaseProgress.md  RELEASE_PLAN.md  ROADMAP.md
examples/eventlab/: game.json  scripts.json  tiles.tsx
examples/isleton/: encounters.json  game.json  scripts.json  tiles.tsx
examples/kanto/: encounters.json  game.json  scripts.json  tiles.tsx
examples/kanto_frlg/: encounters.json  game.json  tiles.tsx
examples/seamless/: encounters.json  game.json  tiles.tsx
examples/triad/: encounters.json  game.json  scripts.json
game/assets/: encounters.json  game.json  scripts.json  tiles.tsx
game/data/: abilities.json  items.json  natures.json  types.json
pkmn/battle/: ai.py  damage.py  engine.py  events.py  field.py  moves.py  passives.py  state.py
pkmn/cli/: audio.py  audit.py  battle_demo.py  coverage.py  lint.py  sprites.py
pkmn/core/: experience.py  pokemon.py  stats.py
pkmn/data/: models.py  repository.py
pkmn/datagen/: fetch.py  mechanics.py
pkmn/game/: __init__.py  assets.py  audio.py  battle_scene.py  (+18 more)
tests/: conftest.py  fixtures.py  test_audio.py  test_authoring.py  test_backdrop.py  test_battle.py  test_contract.py  test_core.py  test_dataset.py  test_daytime.py  test_doubles.py  test_encounters_methods.py  test_ev_yield.py  test_eventlab.py  test_events.py  test_examples_boot.py  test_fieldmoves.py  test_game.py  test_keybinds.py  test_layers.py  test_phase2.py  test_phase_b.py  test_phase_d.py  test_scripting.py  test_seamless.py  test_showcase.py  test_sprites.py  test_systems.py  test_title.py  test_trainerspec.py
tools/: art.py  make_assets.py  make_example_region.py  make_seamless_region.py  make_triad_region.py  rmxp2kanto.py
(+1260 files in other folders)
