[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-python"
version = "0.9.0"
description = "A Gen 4/5-style Pokémon engine and game-authoring toolkit in pure Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
    "pytmx>=3.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "Pillow>=10.0",
    "build",
]

[project.scripts]
pkmn-play     = "pkmn.game.play:main"
pkmn-demo     = "pkmn.cli.battle_demo:main"
pkmn-lint     = "pkmn.cli.lint:main"
pkmn-audit    = "pkmn.cli.audit:main"
pkmn-coverage = "pkmn.cli.coverage:main"
pkmn-sprites  = "pkmn.cli.sprites:main"
pkmn-fetch-data = "pkmn.datagen.fetch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkmn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
